# uv

package_uv/: .env  pyproject.toml
package_uv/src/package_uv/: hello.py  llm.py
second_uv/: hello.py  pyproject.toml
second_uv/src/hello/: main.py
